# config/routes.rb
@@ -4,13 +4,9 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do 
       resources :cars, only: [:index, :show, :create, :destroy]
-      resources :users, param: :username, only: [:create] do
-        resources :reservations, only: [:create, :destroy]
-      end
+      resources :users, param: :username, only: [:create]
       resources :sessions, only: [:create]
-      
-      # TEMPORAL ROUTE FOR MOCKING RESERVATIONS
-      resources :reservations, only: [:index, :destroy]
+      resources :reservations, only: [:index, :create, :destroy]
     end
   end
 end
