# swagger/v1/swagger.yaml
@@ -21,6 +21,77 @@ paths:
       responses:
         '200':
           description: Cars retrieved
+    post:
+      summary: Create a Car
+      tags:
+      - Cars
+      security:
+      - bearer: []
+      parameters: []
+      responses:
+        '201':
+          description: Car created
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                brand:
+                  type: string
+                model:
+                  type: string
+                finance_fee:
+                  type: integer
+                purchase_fee:
+                  type: integer
+                tap:
+                  type: integer
+                duration:
+                  type: integer
+                description:
+                  type: text
+              required:
+              - brand
+              - finance_fee
+              - model
+              - tap
+              - duration
+              - description
+  "/api/v1/cars/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    delete:
+      summary: Delete Car
+      tags:
+      - Car
+      security:
+      - bearer: []
+      responses:
+        '201':
+          description: Car deleted
+  "/api/v1/users/{user_username}/reservations":
+    parameters:
+    - name: user_username
+      in: path
+      description: user_username
+      required: true
+      schema:
+        type: string
+    get:
+      summary: Create a Reservation
+      tags:
+      - Reservations
+      security:
+      - Bearer: []
+      responses:
+        '200':
+          description: Reservation retrieved
   "/api/v1/sessions":
     post:
       summary: Create a user session
@@ -77,6 +148,13 @@ paths:
                   type: string
               required:
               - username
+components:
+  securitySchemes:
+    Bearer:
+      type: apiKey
+      name: Authorization
+      in: header
+      description: Bearer token
 servers:
 - url: http://{defaultHost}
   variables:
